opam-version: "2.0"
name: "project"
version: "0.1"
synopsis: "Robot State!"
description: """
Longer description: https://github.com/zevbo/RobotState
"""
maintainer: "Zev Minsky-Primus <zevminskyprimus@gmail.com>"
authors: "Zev Minsky-Primus <zevminskypimus@gmail.com>"
license: ""
homepage: ""
bug-reports: ""
dev-repo: ""
depends: [ "ocaml" "ocamlfind" ]
build: ["dune" "build" "-p" name "-j" jobs]