opam-version: "2.0"
name: "robot_state"
version: "0.1"
synopsis: "Robot State!"
description: """
Longer description: https://github.com/zevbo/RobotState
"""
maintainer: "Zev Minsky-Primus <zevminskyprimus@gmail.com>"
authors: "Zev Minsky-Primus <zevminskypimus@gmail.com>"
homepage: "https://github.com/zevbo/RobotState"
bug-reports: "https://github.com/zevbo/RobotState"
depends: [ "ocaml" "ocamlfind" ]
build: ["dune" "build" "-p" name]